deleted test suite